# papercut

./: .gitignore  LICENSE  README.md  pyproject.toml  shell.nix
.github/workflows/: ci.yml
scripts/: list_sources.py  prospective_smoke.py  smoke_eval.py
src/papercut/cli/: __init__.py  main.py
src/papercut/data/: manifest.py
src/papercut/data/loaders/: __init__.py  hf.py  tabme_pp.py
src/papercut/data/sources/: __init__.py  ai_lab_splitter.py  arxiv.py  bundestag.py  doclaynet.py  eurlex.py  iit_cdip.py  openpss.py  tabme.py  tobacco800.py  wooir.py
src/papercut/eval/: metrics.py  prospective.py  runner.py
src/papercut/models/: base.py
src/papercut/models/baselines/: minilm_xgb.py  multilingual_minilm.py  text_similarity.py  tfidf_xgb.py  tfidf_xgb_layout.py  tfidf_xgb_layout_sem.py  tfidf_xgb_layout_vis.py  tfidf_xgb_rich.py  trivial.py
src/papercut/models/ensembles/: late.py
src/papercut/models/smoothing/: oof_stacker.py  seq_lr.py  viterbi.py
src/papercut/streams/: concat.py  resolver.py  types.py
tests/: conftest.py  test_cli.py  test_cli_eval_prospective.py  test_cli_eval_run.py  test_cli_filter.py  test_concat.py  test_corpus_persistence.py  test_hf_loader.py  test_metrics.py  test_multilingual_minilm.py  test_probs_and_ensemble.py  test_prospective.py  test_resolver.py  test_runner.py  test_sources.py  test_streams.py  test_tabme_pp_loader.py  test_text_similarity.py  test_tfidf_xgb.py  test_viterbi.py
