[project]
name = "papercut"
version = "0.0.1"
description = "Page Stream Segmentation for paperless-ngx. Scan a stack, walk away."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "tieo" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3",
    "transformers>=4.41",
    "datasets>=2.19",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "sentence-transformers>=3.0",
]
ocr = [
    "paddleocr>=2.7",
    "pytesseract>=0.3.10",
]
pdf = [
    "pypdf>=5.0",
    "pdf2image>=1.17",
    "reportlab>=4.0",
]
augment = [
    "augraphy>=8.2",
]
track = [
    "mlflow>=2.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "mypy>=1.10",
    "pypdf>=5.0",
    "reportlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papercut"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
